# event_project

./: .gitignore  .pre-commit-config.yaml  README.md  create_db.py  pyproject.toml  test_beispiel.py
api_requests/events/: create_category.http  list_categories.http
docs/markdowns/: legacy_db_einbinden.md  pull_request.md
event_manager/: db.sqlite3  external_data_neu.sqlite3
event_manager/event_manager/: asgi.py  db_router.py  settings.py  urls.py  wsgi.py
event_manager/event_manager/templates/: base.html
event_manager/events/: forms.py  models.py  urls.py  views.py
event_manager/events/api/: serializers.py  urls.py  views.py
event_manager/events/migrations/: 0001_initial.py  0002_category_sub_title.py  0003_category_created_at_category_updated_at.py  0006_alter_event_date_alter_event_name.py
event_manager/events/templates/events/: categories.html  category_detail.html  category_form.html  event_list.html
event_manager/external_app/: apps.py  models.py  urls.py  views.py
event_manager/external_app/migrations/: 0001_initial.py  0002_alter_sales_options.py
event_manager/external_app/templates/external_app/: company_list.html  sales_list.html  sales_list_grouped.html
event_manager/first/: views.py
