[project]
name = "event-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crispy-bootstrap5>=2026.3",
    "django==5.2",
    "django-crispy-forms>=2.6",
    "django-stubs[compatible-mypy]>=6.0.2",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.3.0",
]
